--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -5,7 +5,9 @@
 .TestimonialBg {
   position: relative;
   min-height: 415px;
-  background: url("../../Images/pattern.png") no-repeat center/cover;
+  /* background: url("../../Images/pattern.png") no-repeat center/cover; */
+  background: url("../../Images/PatternTestimonials.svg") no-repeat;
+  background-size: 100% auto;
 }
 
 .TestimonialContent p {
@@ -77,7 +79,7 @@
 .RajsonsLogo {
   top: 8px;
   right: 16%;
-} 
+}
 
 .TesmedLogo {
   top: 8px;
