--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -227,6 +227,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* flex-wrap: wrap; */
 }
 .footer-about-us-eachsec {
   display: flex;
