--- a/src/Components/SiteLoader/SiteLoader.css
+++ b/src/Components/SiteLoader/SiteLoader.css
@@ -4,8 +4,11 @@
   top: 0;
   z-index: 1000;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background-color: white !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* animation: fade-out 5s;
   animation-iteration-count: 1;*/
   /* transition: 500ms all cubic-bezier(0.4, 0, 0.2, 1); */
