--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -2,7 +2,8 @@
   padding: 64px 0 196px 0;
   margin-top: 96px;
   font-family: "Quicksand", sans-serif;
-  background: url("../../Images/hero_bg.png") no-repeat center/cover;
+  /* background: url("../../Images/hero_bg.png") no-repeat center/cover; */
+  background: url("../../Images/hero_bg@3x.png") no-repeat center/cover;
   background-size: 100% 100%;
 }
 
@@ -11,7 +12,7 @@
   margin: 0 auto;
 }
 .HeroBg {
-  background: url("../../Images/HeroShapes.svg") no-repeat 50% 32%;
+  /* background: url("../../Images/HeroShapes.svg") no-repeat 50% 32%; */
   padding: 64px 0 196px 0;
 }
 
