--- a/src/Components/LetsStartSection/LetsStartSection.css
+++ b/src/Components/LetsStartSection/LetsStartSection.css
@@ -14,6 +14,10 @@
   margin-bottom: 20px;
 }
 
+.LetsStartSectionCard .body-copy {
+  font-weight: 500;
+}
+
 .btn.demo-card-btn {
   font-size: 16px;
   font-weight: bold;
