--- a/src/Components/WhyLiveSection/WhyLiveSection.css
+++ b/src/Components/WhyLiveSection/WhyLiveSection.css
@@ -4,10 +4,17 @@
   font-style: normal;
   letter-spacing: normal;
   color: #ffffff;
+  border-radius: 0.5rem;
   padding: 12px 18px;
   opacity: 0.9;
   border: none;
   box-shadow: -1.1px 8.9px 21px 0 rgba(103, 76, 243, 0.1);
+}
+
+.btn.demo-btn:hover {
+  background-image: none;
+  background-color: #8039db;
+  border-color: #8039db;
 }
 
 .WhyLiveSection .card {
@@ -38,25 +45,31 @@
 
 .SellerTrackingCardSection .card {
   margin-bottom: 32px !important;
-  transition: 0.7s;
+  transition: 0.3s ease-in-out;
   /* background: linear-gradient(90deg, #000 50%, #fff 50%); */
 
   /* transition: all .7s ease-out; */
 }
 
 .SellerTrackingCardSection .card.right-seller {
-  background: linear-gradient(
+  background: #fff;
+  /* background: linear-gradient(
     to right,
     rgba(255, 115, 0, 0.9) 50%,
     #ffffff 50%
-  );
-  background-size: 210% 100%;
-  background-position: bottom right;
+  ); */
+  /* background-size: 210% 100%;
+  background-position: bottom right; */
 }
 
 .SellerTrackingCardSection .card.right-seller svg {
   transition: 0.3s ease-in-out;
   fill: rgba(255, 115, 0, 1);
+}
+
+.SellerTrackingCardSection .card.right-seller:hover {
+  /* background: rgba(255, 115, 0, 0.9); */
+  background-color: rgba(255, 145, 71, 1);
 }
 
 .SellerTrackingCardSection .card.right-seller:hover svg,
@@ -77,9 +90,14 @@
 /*  */
 
 .SellerTrackingCardSection .card.centralized-tracking {
-  background: linear-gradient(to right, rgba(76, 123, 255, 0.9) 50%, #fff 50%);
-  background-size: 210% 100%;
-  background-position: bottom right;
+  /* background: linear-gradient(to right, rgba(76, 123, 255, 0.9) 50%, #fff 50%); */
+  /* background-size: 210% 100%;
+  background-position: bottom right; */
+  background: #fff;
+}
+
+.SellerTrackingCardSection .card.centralized-tracking:hover {
+  background: rgba(76, 123, 255, 0.9);
 }
 
 .SellerTrackingCardSection .card.centralized-tracking svg {
@@ -101,14 +119,20 @@
 .SellerTrackingCardSection
   .card.centralized-tracking:hover
   .CardIconHolder.TrackingImg {
-  background-color: rgb(131, 163, 255) !important;
+  /* background-color: rgb(131, 163, 255) !important; */
+  background-color: #85a5ff !important;
 }
 
 /*  */
 .SellerTrackingCardSection .card.GradientCard {
-  background: linear-gradient(to right, rgba(103, 76, 243, 0.9) 50%, #fff 50%);
+  /* background: linear-gradient(to right, rgba(103, 76, 243, 0.9) 50%, #fff 50%);
   background-size: 210% 100%;
-  background-position: bottom right;
+  background-position: bottom right; */
+  background: #fff;
+}
+
+.SellerTrackingCardSection .card.GradientCard:hover {
+  background: rgba(103, 76, 243, 0.9);
 }
 
 .SellerTrackingCardSection .card.GradientCard svg {
@@ -144,9 +168,15 @@
 /*  */
 
 .SellerTrackingCardSection .card.manage-team {
-  background: linear-gradient(to right, rgba(255, 190, 11, 0.9) 50%, #fff 50%);
+  /* background: linear-gradient(to right, rgba(255, 190, 11, 0.9) 50%, #fff 50%);
   background-size: 210% 100%;
-  background-position: bottom right;
+  background-position: bottom right; */
+  background: #fff;
+}
+
+.SellerTrackingCardSection .card.manage-team:hover {
+  /* background: rgba(255, 190, 11, 0.9); */
+  background: rgba(255, 195, 31, 1);
 }
 
 .SellerTrackingCardSection .card.manage-team svg {
@@ -178,7 +208,7 @@
 /*  */
 
 .SellerTrackingCardSection .card:hover {
-  background-position: bottom left;
+  /* background-position: bottom left; */
   color: #fff !important;
   box-shadow: -20.8px 12px 79px 0 rgba(16, 66, 97, 0.3);
 }
