--- a/src/Components/WhyLiveSection/WhyLiveSection.css
+++ b/src/Components/WhyLiveSection/WhyLiveSection.css
@@ -8,6 +8,7 @@
   padding: 12px 18px;
   opacity: 0.9;
   border: none;
+  transition: 0.3s ease-in-out;
   box-shadow: -1.1px 8.9px 21px 0 rgba(103, 76, 243, 0.1);
 }
 
