--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -56,6 +56,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: 0.3s ease-in-out;
 }
 
 .NavbarItems ul {
@@ -155,5 +156,9 @@
   }
   .MainContainer.NavbarItems {
     padding: 27px 0;
+  }
+
+  .NavbarContainer.navbar-fixed .NavbarItems {
+    padding: 15px 0;
   }
 }
