--- a/src/Components/VideoSection/NewVideoSection.css
+++ b/src/Components/VideoSection/NewVideoSection.css
@@ -175,6 +175,7 @@
 }
 
 .play-button-container .play-button-img {
+  cursor: pointer;
   z-index: 4;
   margin-left: 6px;
   -webkit-transition: 300ms all cubic-bezier(0.4, 0, 0.2, 1);
