--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -2,8 +2,8 @@
   padding: 64px 0 196px 0;
   margin-top: 96px;
   font-family: "Quicksand", sans-serif;
-  /* background: url("../../Images/hero_bg.png") no-repeat center/cover; */
-  background: url("../../Images/hero_bg@3x.png") no-repeat center/cover;
+  background: url("../../Images/hero_bg.png") no-repeat center/cover;
+  /* background: url("../../Images/hero_bg@3x.png") no-repeat center/cover; */
   background-size: 100% 100%;
 }
 
@@ -12,12 +12,40 @@
   margin: 0 auto;
 }
 .HeroBg {
-  /* background: url("../../Images/HeroShapes.svg") no-repeat 50% 32%; */
-  padding: 64px 0 196px 0;
+  background: url("../../Images/HeroShapes.svg") no-repeat 50% 32%;
+  padding: 64px 0 64px 0;
 }
 
 h5.h5.HeroSubTitle {
   color: #2e3e6a;
+}
+
+.HeroTitle {
+  /* overflow: hidden; */
+  /* width: fit-content; */
+  /* margin: auto !important; */
+  /* border-right: 1px solid #2e3e6a; */
+  /* white-space: nowrap; */
+  /* animation: typing 3.5s steps(100, end), blink-caret 0.75s step-end infinite; */
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 70%;
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #2e3e6a;
+  }
 }
 
 .HeroTitle span {
