--- a/src/Components/WhyLiveSection/WhyLiveSection.css
+++ b/src/Components/WhyLiveSection/WhyLiveSection.css
@@ -8,7 +8,8 @@
   font-style: normal;
   letter-spacing: normal;
   color: #ffffff;
-  border-radius: 0.5rem;
+  /* border-radius: 0.5rem; */
+  border-radius: 14px;
   padding: 12px 18px;
   opacity: 0.9;
   border: none;
