--- a/src/Components/TermsConditionsSection/TermsConditionsSection.css
+++ b/src/Components/TermsConditionsSection/TermsConditionsSection.css
@@ -2,8 +2,9 @@
   margin-top: 96px;
 }
 .terms-container-fluid {
-  background: url("../../Images/Bg\ Of\ policy\ doc.svg") no-repeat center/cover;
+  background: url("../../Images/Bg\ Of\ policy\ doc.svg") no-repeat center;
   height: 320px;
+  background-color: #ebf7f9;
 }
 
 .terms-heading-container {
@@ -161,13 +162,21 @@
 
 .terms-button.decline {
   color: #343a40 !important;
+  width: 144px;
+  height: 48px;
+  margin: 0 24px 0px 0px;
+  border-radius: 8px;
+}
+
+.terms-button.decline:hover {
+  box-shadow: 0 6px 12px rgb(0 0 0 / 5%);
 }
 
 .terms-button.agree {
   color: #ffffff !important;
   width: 144px;
   height: 48px;
-  margin: 0 6px 0 48px;
+  margin: 0 6px 0 24px;
   border-radius: 8px;
   background-image: linear-gradient(to right, #674bf2, #6c1ad8);
 }
