--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -1,6 +1,6 @@
 .HeroSection {
   /* padding: 64px 0 196px 0; */
-  padding: 64px 0 126px 0;
+  padding: 8px 0 88px 0;
   margin-top: 96px;
   font-family: "Quicksand", sans-serif;
   background: url("../../Images/hero_bg.png") no-repeat center/cover;
@@ -13,8 +13,9 @@
   margin: 0 auto;
 }
 .HeroBg {
-  background: url("../../Images/HeroShapes.svg") no-repeat 50% 32%;
-  padding: 64px 0 64px 0;
+  /* background: url("../../Images/HeroShapes.svg") no-repeat 50% 32%; */
+  background: url("../../Images/HeroShapes.svg") no-repeat 50% 60%;
+  padding: 64px 0 128px 0;
 }
 
 h5.h5.HeroSubTitle {
@@ -202,4 +203,16 @@ h5.h5.HeroSubTitle {
   text-align: right;
   color: #5b636a;
   margin-bottom: 0;
+}
+
+@media only screen and (max-width: 1599px) {
+  .HeroSection {
+    padding: 0px 0 88px 0;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .HeroSection {
+    padding: 8px 0 140px 0;
+  }
 }
