--- a/src/Components/LetsStartSection/LetsStartSection.css
+++ b/src/Components/LetsStartSection/LetsStartSection.css
@@ -33,9 +33,9 @@
 
 .btn.demo-card-btn:hover {
   /* background-color: #674cf3 !important; */
-  color: rgba(78, 45, 240, 1);
+  color: rgba(78, 45, 240, 1) !important;
   /* box-shadow: -1.1px 8.9px 21px 0 rgba(103, 76, 243, 0.2); */
-  box-shadow: -1.1px 8.9px 21px 0 rgba(78, 45, 240, 1);
+  box-shadow: -1.1px 8.9px 21px 0 rgba(78, 45, 240, 1) !important;
 }
 
 .purple-blob2 {
