--- a/src/Components/WhyLiveSection/WhyLiveSection.css
+++ b/src/Components/WhyLiveSection/WhyLiveSection.css
@@ -56,11 +56,54 @@
 
 .SellerTrackingCardSection .card {
   margin-bottom: 32px !important;
+  position: relative;
   transition: 0.3s ease-in-out;
   /* background: linear-gradient(90deg, #000 50%, #fff 50%); */
 
   /* transition: all .7s ease-out; */
 }
+
+.SellerTrackingCardSection .card::after {
+  position: absolute;
+  content: "";
+  top: 50%;
+  height: 0%;
+  width: 0%;
+  left: 50%;
+  transition: 0.4s ease-in-out;
+}
+
+.SellerTrackingCardSection .card .card-body {
+  z-index: 1;
+}
+
+.SellerTrackingCardSection .card:hover::after {
+  height: 100%;
+  width: 100%;
+  top: 0%;
+  left: 0%;
+  /* background-color: orange; */
+  z-index: 0;
+  border-radius: inherit;
+}
+
+.SellerTrackingCardSection .card.right-seller:hover::after {
+  background-color: rgba(255, 115, 0, 0.9);
+}
+
+.SellerTrackingCardSection .card.centralized-tracking:hover::after {
+  background: rgba(76, 123, 255, 0.9);
+}
+
+.SellerTrackingCardSection .card.card.GradientCard:hover::after {
+  background: rgba(103, 76, 243, 0.9);
+}
+
+.SellerTrackingCardSection .card.card.manage-team:hover::after {
+  background: rgba(255, 195, 31, 1);
+}
+
+/* Individual card section properties */
 
 .SellerTrackingCardSection .card.right-seller {
   background: #fff;
@@ -71,16 +114,27 @@
   ); */
   /* background-size: 210% 100%;
   background-position: bottom right; */
+  /* background-image: radial-gradient(
+    rgba(255, 115, 0, 0.9),
+    rgba(255, 115, 0, 0.9)
+  );
+  background-position: 50% 50%;
+  background-size: 0% 0%;
+  background-repeat: no-repeat;
+  transition: background-size 0.25s ease-in-out, color 0.25s ease-in-out; */
 }
 
-.SellerTrackingCardSection .card.right-seller svg {
-  transition: 0.3s ease-in-out;
+.SellerTrackingCardSection .card.right-seller svg,
+.SellerTrackingCardSection .card.right-seller svg g {
+  transition: 0.1s ease-in-out;
+  transition-property: fill;
   fill: rgba(255, 115, 0, 1);
 }
 
 .SellerTrackingCardSection .card.right-seller:hover {
   /* background: rgba(255, 115, 0, 0.9); */
-  background-color: rgba(255, 145, 71, 1);
+  /* background-color: rgba(255, 145, 71, 1); */
+  background-size: 100% 100%;
 }
 
 .SellerTrackingCardSection .card.right-seller:hover svg,
@@ -107,11 +161,12 @@
   background: #fff;
 }
 
-.SellerTrackingCardSection .card.centralized-tracking:hover {
+/* .SellerTrackingCardSection .card.centralized-tracking:hover {
   background: rgba(76, 123, 255, 0.9);
-}
+} */
 
-.SellerTrackingCardSection .card.centralized-tracking svg {
+.SellerTrackingCardSection .card.centralized-tracking svg,
+.SellerTrackingCardSection .card.centralized-tracking svg g {
   transition: 0.3s ease-in-out;
   fill: rgba(76, 123, 255, 1);
 }
@@ -142,9 +197,9 @@
   background: #fff;
 }
 
-.SellerTrackingCardSection .card.GradientCard:hover {
+/* .SellerTrackingCardSection .card.GradientCard:hover {
   background: rgba(103, 76, 243, 0.9);
-}
+} */
 
 .SellerTrackingCardSection .card.GradientCard svg {
   transition: 0.3s ease-in-out;
@@ -185,10 +240,10 @@
   background: #fff;
 }
 
-.SellerTrackingCardSection .card.manage-team:hover {
-  /* background: rgba(255, 190, 11, 0.9); */
-  background: rgba(255, 195, 31, 1);
-}
+/* .SellerTrackingCardSection .card.manage-team:hover { */
+/* background: rgba(255, 190, 11, 0.9); */
+/* background: rgba(255, 195, 31, 1); */
+/* } */
 
 .SellerTrackingCardSection .card.manage-team svg {
   transition: 0.3s ease-in-out;
