--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -13,16 +13,22 @@
 #before,
 #after {
   position: absolute;
-  width: 45%;
-  height: 100%;
+  /* width: 45%; */
+  /* height: 100%; */
+  border: 3px solid #2e3e6a;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 #before {
   left: 0;
+  left: 5%;
+  top: 40%;
 }
 
 #after {
-  right: 0;
+  right: 5%;
+  top: 40%;
 }
 
 .TestimonialContent p {
