--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -19,7 +19,18 @@
   margin: 0 auto;
   background-color: #ffffff;
   z-index: 1001;
+  animation: navLoad 0.5s ease-in-out;
 }
+
+/* @keyframes navLoad {
+  from {
+    transform: translateY(-100px);
+  }
+
+  to {
+    transform: translateY(0px);
+  }
+} */
 
 .NavbarContainer.navbar-fixed {
   border-bottom: 1px solid #c3cde4;
