--- a/src/Components/SuccessModal/SuccessModal.css
+++ b/src/Components/SuccessModal/SuccessModal.css
@@ -4,7 +4,7 @@
 
 .success-modal-body {
   border-radius: 14px !important;
-  padding: 35px 0px !important;
+  padding: 0px 0px 35px 0px !important;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,6 +18,7 @@
   font-style: normal;
   letter-spacing: normal;
   color: #2e3e6a;
+  transform: translateY(-50px);
 }
 
 .success-paragraph {
@@ -27,4 +28,5 @@
   letter-spacing: normal;
   font-size: 16px;
   color: #2e3e6a;
+  transform: translateY(-36px);
 }
